src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__no_name_project.snap
---
source: src/snapshot_middleware/project.rs
assertion_line: 735
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/default.project.json
  context:
    emit_legacy_scripts: true
name: foo
class_name: Model
properties: {}
children: []
