src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_from_direct_file.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/hello.project.json
  relevant_paths:
    - /foo/hello.project.json
  context:
    script_type: Class
name: direct-project
class_name: Model
properties: {}
children: []

