src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_from_folder.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/default.project.json
  context:
    script_type: Class
name: indirect-project
class_name: Folder
properties: {}
children: []
