src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_children.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.project.json
  relevant_paths:
    - /foo.project.json
  context:
    emit_legacy_scripts: true
  specified_id: ~
  middleware: ~
  schema: ~
name: children
class_name: Folder
properties: {}
children:
  - snapshot_id: "00000000000000000000000000000000"
    metadata:
      ignore_unknown_instances: true
      instigating_source:
        ProjectNode:
          path: /foo.project.json
          name: Child
          node:
            $className: Model
          parent_class: Folder
      relevant_paths: []
      context:
        emit_legacy_scripts: true
      specified_id: ~
      middleware: ~
      schema: ~
    name: Child
    class_name: Model
    properties: {}
    children: []
