src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_path_to_txt.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo/default.project.json
  relevant_paths:
    - /foo/other.txt
    - /foo/other.meta.json
    - /foo/default.project.json
  context: {}
name: path-project
class_name: StringValue
properties:
  Value:
    String: "Hello, world!"
children: []
ignore_children: false

