src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_relative_path.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /foo/bar/default.project.json
  relevant_paths:
    - /baz/other.txt
    - /baz/other.meta.json
    - /foo/bar/default.project.json
  context: {}
name: path-project
class_name: StringValue
properties:
  Value:
    Type: String
    Value: "Hello, world!"
children: []
