src/snapshot_middleware/snapshots/librojo__snapshot_middleware__project__test__project_with_resolved_properties.snap
---
source: src/snapshot_middleware/project.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.project.json
  relevant_paths:
    - /foo.project.json
  context: {}
name: resolved-properties
class_name: StringValue
properties:
  Value:
    String: "Hello, world!"
children: []

